# QuizForgeAI

./: .gitignore  README.md  pyproject.toml
src/quizforge_ai/: app.py  crew.py  main.py
src/quizforge_ai/config/: agent.yaml  task.yaml
src/quizforge_ai/models/: quiz.py
src/quizforge_ai/tools/: extract_pdf_content_tool.py
